[package]
name = "pixforge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pixforge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif", "ico", "webp"] }
webp = "0.3.0"
anyhow = "1.0"
walkdir = "2.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
strip = true